objects/tffa__Questionnaire__c.object
<CustomObject>
    <description>A collection of dynamic questions relevant to each use case . 
The use cases are detailed in the QuestionnaireType.

The questionnaire is classified using facts such as Product, ProductCategory, ApplicantType,Channel. These facts can be utilised to pickup
        the appropriate questionnaire for use case.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>Created Channel</description>
        <label>Channel (DEPRECATED)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the questionnaire.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <description>Type of entity</description>
        <label>Entity type (DEPRECATED)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EventName__c</fullName>
        <description>Event or purpose of capture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event name (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InputStyleClass__c</fullName>
        <description>CSS style class to be applied on input part of questions. Represents a global setting that can be overridden by InputStyleClass on each question. e.g. col-md-12</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Input style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LabelStyleClass__c</fullName>
        <description>CSS style class to be applied on label part of questions. Represents a global setting that can be overridden by LabelStyleClass on each question. e.g. fs-6</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application. Represents a fact.</description>
        <label>Party role (DEPRECATED)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Type of Party</description>
        <label>Party type (DEPRECATED)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Product category of related application</description>
        <label>Product category (DEPRECATED)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product as a fact. Used for resolving a questionnaire specific to a product.</description>
        <label>Product (DEPRECATED)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>$Source.tffa__ProductCategory__c</field>
                <operation>equals</operation>
                <valueField>tffa__Product__c.tffa__Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of questionnaire.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__QuestionnaireType</valueSetName>
        </valueSet>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__ProductCategory__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__PartyType__c</columns>
        <columns>tffa__EventName__c</columns>
        <columns>tffa__EntityType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__CDD</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>CDD</value>
        </filters>
        <label>CDD</label>
    </listViews>
    <listViews>
        <fullName>tffa__Declaration</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>DECLARATION</value>
        </filters>
        <label>Declaration</label>
    </listViews>
    <listViews>
        <fullName>tffa__Eligibility</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>ELIGIBILITY</value>
        </filters>
        <label>Eligibility</label>
    </listViews>
    <listViews>
        <fullName>tffa__ExpectedActivity</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>EXPECTED_ACTIVITY</value>
        </filters>
        <label>Expected Activity</label>
    </listViews>
    <listViews>
        <fullName>tffa__FinancialNeed</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>FINANCIAL_NEED</value>
        </filters>
        <label>Financial Need</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>